--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@typescript-eslint/parser": "^5.10.1",
 		"@vercel/node": "^1.15.0",
 		"autoprefixer": "^10.4.7",
+		"dotenv": "^16.0.0",
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
