--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"preserveValueImports": false,
-		"removeComments": true
+		"removeComments": true,
+		"resolveJsonModule": true
 	},
 	"extends": "./.svelte-kit/tsconfig.json"
 }
