--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "tombola-lycee",
 	"private": true,
-	"version": "1.0.2-beta",
+	"version": "1.0.0-beta.2",
 	"description": "Site de la Tombola 2022 du Lycée du Mont-Blanc",
 	"keywords": [
 		"Tombola",
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@paypal/paypal-js": "^5.0.5",
+		"@prisma/client": "^3.13.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -42,6 +43,8 @@
 		"postcss": "^8.4.13",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"prettier-plugin-tailwind": "^2.2.12",
+		"prisma": "^3.13.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
